<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OpinionS</string>
    <string name="hello_world">Hello world!</string>
    <string name="nbrSubscribers">You have no subscribers</string>
    <string name="refresh">Refr.</string>
    <string name="prompt_username">Username</string>
    <string name="submit_button">Submit a question!</string>
    <string name="choose">Choose!</string>
    <string name="answer_button">What\'s your Opinion?</string>
    <string name="asker_info">No info on the asker!</string>
    <string name="askedBy">Asked by:</string>
    <string name="log_in">Log In!</string>
    <string name="login_title">Log in</string>
    <string name="sign_up">Sign Up!</string>
    <string name="signup_title">Please fill in this information to sign up</string>
    <string name="no_account">No account yet?</string>
    <string name="password_forgotten">Forgot Password?</string>
    <string name="type_email">Type in your e-mail address to reset your password\:</string>
    <string name="reset_password">Reset password</string>
    <string name="error_please">&quot;Please &quot;</string>
    <string name="error_no_username">enter a username</string>
    <string name="error_no_password">enter a password</string>
    <string name="error_and">&quot; and &quot;</string>
    <string name="error_passwords_diff">confirm your password</string>
    <string name="error_end">.</string>
    <string name="error_no_email">enter a valid email address</string>
    <string name="log_out">Log Out</string>
    <string name="change">Change</string>
    <string name="submit">Submit</string>
    <string name="BTM">Back to menu</string>
    <string name="BTL">Back to Login</string>
    <string name="submit_selection">Submit selection</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Password Again</string>
    <string name="prompt_question">Enter your question</string>
    <string name="question_to_submit">Enter your question!</string>
    <string name="done">Done</string>
    <string name="possible_answers">Add 2 to 5 possible answers</string>
    <string name="prompt_answer">Enter a possible answer</string>
    <string name="add">Add</string>
    <string name="question_preview">Here you can see a preview of your question</string>
    <string name="question_view">The question hasn\'t loaded yet!</string>
    <string name="answer1">Answer 1</string>
    <string name="answer2">Answer 2</string>
    <string name="answer3">Answer 3</string>
    <string name="answer4">Answer 4</string>
    <string name="answer5">Answer 5</string>
    <string name="delete">Delete</string>
    <string name="country_set">Country:</string>
    <string name="select_country">Please choose your country</string>
    <string name="need_country">You have to choose your country in order to receive and submit questions!</string>
    <string name="no_country">No country yet</string>
    <string name="approve_question">Do you approve this question?</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="results_title">Here are the results!</string>
    <string name="total">Total</string>
    <string name="useLocation">Use your location to send and receive questions</string>
    <string name="international">Send and receive international questions (in english)</string>
    <string name="normalSubmit">Ask users in your country</string>
    <string name="areaSubmit">Ask users in your area</string>
    <string name="wifiSubmit">Ask users nearby</string>
    <string name="subscribersSubmit">Ask your subscribers</string>
    <string name="internationalSubmit">Ask users all around the world</string>
    <string name="usersAvailable">About 0 users available</string>
    <string name="usersNumber">Ask 0 users</string>
    <string name="saveResults">Save results</string>
    <string name="savedQuestions">Saved questions</string>
    <string name="subscribe">Subscribe to this user\'s questions</string>
    <string name="ok">OK</string>
    <string name="countdown">Countdown</string>
    <string name="older_questions">Load older questions</string>
    <string name="newer_questions">Load newer questions</string>
    <string name="title_activity_reset_password">ResetPassword</string>
    <string name="action_settings">Settings</string>
    <string name="subscribeToUser">Subscribe to a user\'s questions!</string>
    <string name="yourSubscriptions">Your subscriptions</string>
    <string name="subscriptionUsername">Subscription Username</string>
    <string name="unsubscribe_selection">Unsubscribe from selection</string>
    <string name="facebook_app_id">758477814206679</string>
    <string name="share">Share</string>
    <string name="date_info">Date</string>
    
</resources>
