<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:background="@drawable/background_2"
>

<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="${packageName}.${activityClass}" >
    
    <Button
        android:id="@+id/submit_button"
        style="@style/ButtonStyle"
        android:layout_centerHorizontal="true"
        android:text="@string/submit_button"
         />
    
    <TextView
        android:id="@+id/username_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/submit_button"
        android:padding="12dp"
        android:text="@string/prompt_username"
        android:textStyle="bold"
        android:textSize="18sp"
         />
 
    <TextView
        android:id="@+id/nbrSubscribers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/username_profile"
        android:padding="10dp"
        android:text="@string/nbrSubscribers" />
    
    <ImageButton
        android:id="@+id/nbrSubscribersRefresh_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/nbrSubscribers"
        android:layout_toRightOf="@id/nbrSubscribers"
        android:padding="5dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/delete"
        android:src="@drawable/button_refresh"
        android:focusable="true"
        android:focusableInTouchMode="true" />
    
    <TextView
        android:id="@+id/subscribeToUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/nbrSubscribers"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/subscribeToUser"
        android:textStyle="bold"
        android:textSize="16sp" />
    
    <EditText
        android:id="@+id/subscribeToUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/subscribeToUser"
        android:layout_centerHorizontal="true"
        android:hint="@string/prompt_username"
        android:inputType="textEmailAddress"
        android:maxLength="40"
        android:maxLines="1"
        android:singleLine="true" />
    
    <ImageButton
        android:id="@+id/subscribeToUser_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/subscribeToUsername"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/delete"
        android:src="@drawable/button_subscribe" />
    
    <TextView
        android:id="@+id/country_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/subscribeToUser_button"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="12dp"
        android:text="@string/country_set"
        android:textStyle="bold"
        android:textSize="18sp" /> 
    
    <Button
        android:id="@+id/country_change_button"
        style="@style/ButtonStyle"
        android:layout_alignBaseline="@id/country_set"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:text="@string/change" />
    
    <TextView
        android:id="@+id/country_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/country_set"
        android:layout_centerHorizontal="true"
        android:text="@string/no_country"
        android:textSize="16sp"
        />
    
    <TextView
        android:id="@+id/no_country_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/country_set"
        android:padding="12dp"
        android:text="@string/need_country"
        />
    
    <TextView
        android:id="@+id/use_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/location_button"
        android:layout_below="@+id/no_country_view"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/useLocation" />
    
    <ToggleButton
        android:id="@+id/location_button"
        style="@style/ButtonStyle.Toggle"
        android:layout_alignParentRight="true"
        android:layout_below="@id/no_country_view"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:textOn="Yes"
        android:textOff="No"
        />
		
	<TextView
        android:id="@+id/international"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/international_button"
        android:layout_below="@+id/use_location"
        android:padding="10dp"
        android:text="@string/international" />
    
    <ToggleButton
        android:id="@+id/international_button"
        style="@style/ButtonStyle.Toggle"
        android:layout_alignParentRight="true"
        android:layout_below="@id/use_location"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:textOn="Yes"
        android:textOff="No"
        />	
    
    <Button
        android:id="@+id/yourSubscriptions_button"
        style="@style/ButtonStyle"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/international"
        android:layout_marginTop="40dp"
        android:text="@string/yourSubscriptions" />
    
    <Button
        android:id="@+id/savedQuestions_button"
        style="@style/ButtonStyle"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/yourSubscriptions_button"
        android:layout_marginBottom="20dp"
        android:text="@string/savedQuestions" />
    
	<Button
        android:id="@+id/log_out_button"
        style="@style/ButtonStyle.LogOut"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/savedQuestions_button"
        android:text="@string/log_out" />
    
    
</RelativeLayout>


</ScrollView>
