<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:background="@drawable/background_2">

    <RelativeLayout
    		android:layout_width="match_parent"
    		android:layout_height="wrap_content" >
            
            <EditText
                android:id="@+id/username_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_username"
                android:inputType="textEmailAddress"
                android:maxLines="1"
        		android:maxLength="40"
                android:singleLine="true" />
            
            <EditText
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/username_login"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
        		android:maxLength="40"
                android:singleLine="true" />  

            <Button
                android:id="@+id/log_in_button"
                style="@style/ButtonStyle"
                android:layout_below="@id/password_login"
                android:layout_centerHorizontal="true"
                android:text="@string/log_in" />
            
            <TextView 
                android:id="@+id/password_forgotten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_below="@id/log_in_button"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:text="@string/password_forgotten" />
            
            <TextView 
                android:id="@+id/no_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_below="@id/password_forgotten"
                android:layout_centerHorizontal="true"
                android:text="@string/no_account" />

            <Button
                android:id="@+id/no_account_button"
                style="@style/ButtonStyle.LogOut"
                android:layout_below="@id/no_account"
                android:layout_centerHorizontal="true"
                android:text="@string/sign_up" />
    
    </RelativeLayout>

</ScrollView>