<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:background="@drawable/background_2">

    <RelativeLayout
    		android:layout_width="match_parent"
    		android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/reset_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/type_email" />
    
    <EditText
        android:id="@+id/email_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reset_title"
        android:layout_margin="15dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true" />
    
    <Button
        android:id="@+id/reset_button"
        style="@style/ButtonStyle.LogOut"
        android:layout_below="@id/email_reset"
        android:layout_centerHorizontal="true"
        android:text="@string/reset_password" />
    
    <Button
        android:id="@+id/reset_back_to_menu_button"
        style="@style/ButtonStyle"
        android:layout_below="@id/reset_button"
        android:layout_centerHorizontal="true"
        android:text="@string/BTL" />

</RelativeLayout>

</ScrollView>