<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:background="@drawable/background_2">

<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="${packageName}.${activityClass}" >
        
     <TextView 
        android:id="@+id/approve_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/approve_question"
        android:textSize="18sp"
        />
     
     <TextView
        android:id="@+id/asker_info_ap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/approve_title"
        android:text="@string/asker_info"
        android:textSize="16sp"
        />
     
    <TextView
        android:id="@+id/countdown_ap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/asker_info_ap"
        android:layout_centerHorizontal="true" 
        android:layout_marginTop="10dp"
        android:text="@string/countdown"
        android:textColor="@color/darkBlue"
        />
    
    <ImageView
        android:id="@+id/question_mark_ap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:src="@drawable/question_mark"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
		android:layout_alignTop="@+id/question_view_ap"
        android:contentDescription="@string/delete"       
        />
    
    <TextView
        android:id="@+id/question_view_ap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_toRightOf="@id/question_mark_ap"
        android:layout_below="@id/countdown_ap"
        android:text="@string/question_view"
        android:paddingTop="20dp"
        android:paddingBottom="30dp"
        android:paddingRight="10dp"
        android:textSize="16sp"
        />
    
    <TableLayout
    	android:id="@+id/approve_layout"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/question_view_ap" 
    	android:layout_marginBottom="10dp"
    	android:shrinkColumns="1"
    	android:weightSum="100"
    	>
        
        <TableRow 
		    android:layout_marginBottom="10dp" >
		    
		    <ImageView
		        android:id="@+id/one_ap"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginRight="5dp"
		        android:layout_marginLeft="5dp"
		        android:layout_weight="10"
		        android:src="@drawable/one"
		        android:layout_gravity="center"
		        android:contentDescription="@string/delete"       
		        />
		    
		    <TextView
		        android:id="@+id/answer1_ap"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="90"
		        android:layout_gravity="center_vertical"
		        android:text="@string/answer1"
		        android:textSize="16sp"
		        />
		    
    	</TableRow>
    
    	<TableRow 
		    android:layout_marginBottom="10dp" >
		    
		    <ImageView
		        android:id="@+id/two_ap"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginRight="5dp"
		        android:layout_marginLeft="5dp"
		        android:layout_weight="10"
		        android:src="@drawable/two"
		        android:layout_gravity="center"
		        android:contentDescription="@string/delete"       
		        />
		    
		    <TextView
		        android:id="@+id/answer2_ap"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="90"
		        android:layout_gravity="center_vertical"
		        android:text="@string/answer2"
		        android:textSize="16sp"
		        />
		    
    	</TableRow>
    
    	<TableRow  
		    android:layout_marginBottom="10dp" >
		    
		    <ImageView
		        android:id="@+id/three_ap"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginRight="5dp"
		        android:layout_marginLeft="5dp"
		        android:layout_weight="10"
		        android:src="@drawable/three"
		        android:layout_gravity="center"
		        android:contentDescription="@string/delete"       
		        />
		    
		    <TextView
		        android:id="@+id/answer3_ap"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="90"
		        android:layout_gravity="center_vertical"
		        android:text="@string/answer3"
		        android:textSize="16sp"
		        />
		    
    	</TableRow>
    
    	<TableRow  
		    android:layout_marginBottom="10dp" >
		    
		    <ImageView
		        android:id="@+id/four_ap"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginRight="5dp"
		        android:layout_marginLeft="5dp"
		        android:layout_weight="10"
		        android:src="@drawable/four"
		        android:layout_gravity="center"
		        android:contentDescription="@string/delete"       
		        />
		    
		    <TextView
		        android:id="@+id/answer4_ap"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="90"
		        android:layout_gravity="center_vertical"
		        android:text="@string/answer4"
		        android:textSize="16sp"
		        />
		    
    	</TableRow>
    

    	<TableRow  
		    android:layout_marginBottom="10dp" >
		    
		    <ImageView
		        android:id="@+id/five_ap"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginRight="5dp"
		        android:layout_marginLeft="5dp"
		        android:layout_weight="10"
		        android:src="@drawable/five"
		        android:layout_gravity="center"
		        android:contentDescription="@string/delete"       
		        />
		    
		    <TextView
		        android:id="@+id/answer5_ap"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="90"
		        android:layout_gravity="center_vertical"
		        android:text="@string/answer5"
		        android:textSize="16sp"
		        />
		    
    	</TableRow>
    
    </TableLayout>
    
    <Button
        android:id="@+id/approve_button" 
        style="@style/ButtonStyle"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/approve_layout"
        android:layout_marginLeft="50dp"
        android:text="@string/approve" 
        />
    
    <Button
        android:id="@+id/reject_button"
        style="@style/ButtonStyle.LogOut"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@id/approve_button"
        android:layout_below="@id/approve_layout"
        android:layout_marginRight="50dp"
        android:text="@string/reject" 
        />

    
</RelativeLayout>

</ScrollView>
